# serialization

./: CMakeLists.txt  CustomType.hpp  DataStream.hpp  README.md  serializable.hpp  serialize  serialize.cpp  text
